<resources>
    <string name="byedpi_docs">https://github.com/hufrea/byedpi/blob/v0.13/README.md</string>
    <string name="app_name">FlowCloud</string>
    <string name="mode_auto">Авто</string>
    <string name="mode_byedpi">ByeDPI</string>
    <string name="mode_warp">WARP</string>
    <string name="navigation_home">Главная</string>
    <string name="connection_mode">Режим подключения</string>
    <string name="warp_notification_content">Подключение активно: WARP</string>
    <string name="manual_byedpi">Весь трафик будет обработан локальным ByeDPI</string>
    <string name="manual_warp">Весь трафик будет направлен через WARP</string>
    <string name="split_tunneling">Раздельное туннелирование</string>
    <string name="split_tunneling_description">Добавленные адреса направляются через WARP в режиме «Авто». По одному значению в строке.</string>
    <string name="custom_domains_hint">Домены через WARP</string>
    <string name="custom_domains_helper">Например: example.com или *.example.com</string>
    <string name="custom_networks_hint">IP и подсети через WARP</string>
    <string name="custom_networks_helper">Например: 203.0.113.8 или 203.0.113.0/24</string>
    <string name="excluded_apps_title">Приложения вне VPN</string>
    <string name="excluded_apps_description">Выбранные приложения подключаются напрямую через мобильную сеть и не используют FlowCloud.</string>
    <string name="select_excluded_apps">Выбрать приложения</string>
    <string name="excluded_apps_status">Выбрано приложений: %1$d</string>
    <string name="excluded_apps_dialog_title">Приложения вне VPN</string>
    <string name="excluded_apps_empty">Приложения для выбора не найдены</string>
    <string name="save_split_rules">Сохранить списки</string>
    <string name="split_rules_saved">Сохранено: доменов — %1$d, IP/подсетей — %2$d</string>
    <string name="split_rules_locked">Отключите VPN, чтобы изменить маршруты</string>
    <string name="advanced_settings">Дополнительные настройки ByeDPI</string>
    <string name="updates">Обновления</string>
    <string name="installed_version">Установлена версия %1$s</string>
    <string name="automatic_update_checks">Автоматически проверять обновления</string>
    <string name="check_updates">Проверить обновления</string>
    <string name="checking_updates">Проверка обновлений…</string>
    <string name="downloading_update">Скачивание обновления…</string>
    <string name="update_available_title">Доступна версия %1$s</string>
    <string name="update_available_message">Можно скачать и установить обновление.</string>
    <string name="download_update">Скачать</string>
    <string name="app_is_up_to_date">Установлена последняя версия</string>
    <string name="updates_not_published">Обновления пока не опубликованы</string>
    <string name="update_check_failed">Не удалось проверить обновления</string>
    <string name="update_download_failed">Не удалось скачать обновление</string>
    <string name="update_verification_failed">Проверка обновления не пройдена</string>
    <string name="install_permission_required">Разрешите FlowCloud устанавливать обновления</string>
    <string name="install_permission_denied">Без разрешения Android не сможет установить обновление</string>
    <string name="installer_unavailable">На устройстве не найден установщик приложений</string>
    <string name="connected_via">Подключено через %1$s</string>
    <string name="vpn_connect">Подключиться</string>
    <string name="vpn_disconnect">Отключиться</string>
    <string name="vpn_connected">Подключено</string>
    <string name="vpn_connecting">Подключение…</string>
    <string name="vpn_reconnecting">Переподключение…</string>
    <string name="vpn_disconnecting">Отключение…</string>
    <string name="vpn_disconnected">Не подключено</string>
    <string name="proxy_up">Proxy is up</string>
    <string name="proxy_down">Proxy is down</string>
    <string name="proxy_start">Start</string>
    <string name="proxy_stop">Stop</string>
    <string name="settings">Settings</string>
    <string name="vpn_permission_denied">Нет разрешения на VPN-подключение</string>
    <string name="settings_unavailable">Отключите VPN перед изменением настроек</string>
    <string name="title_settings">Настройки</string>
    <string name="save_logs">Сохранить журнал</string>
    <string name="reset_settings">Reset</string>
    <string name="logs_failed">Failed to collect logs</string>
    <string name="proxy_address">%1$s:%2$s</string>
    <string name="theme_settings">Theme</string>
    <string name="mode_setting">Mode</string>
    <string name="dbs_ip_setting">DNS</string>
    <string name="bye_dpi_proxy_ip_setting">Listen address</string>
    <string name="byedpi_proxy_port_setting">Port</string>
    <string name="byedpi_max_connections_setting">Maximum number of connections</string>
    <string name="byedpi_buffer_size_setting">Buffer size</string>
    <string name="byedpi_default_ttl_setting">Default TTL</string>
    <string name="byedpi_no_domain_setting">No domain</string>
    <string name="byedpi_desync_method_setting">Desync method</string>
    <string name="byedpi_split_position_setting">Split position</string>
    <string name="byedpi_split_at_host_setting">Split at host</string>
    <string name="byedpi_fake_ttl_setting">TTL of fake packets</string>
    <string name="byedpi_host_mixed_case_setting">Host mixed case</string>
    <string name="byedpi_domain_mixed_case_setting">Domain mixed case</string>
    <string name="byedpi_host_remove_spaces_setting">Host remove spaces</string>
    <string name="byedpi_tlsrec_enabled_setting">Split TLS record</string>
    <string name="byedpi_tlsrec_position_setting">TLS record split position</string>
    <string name="byedpi_tlsrec_at_sni_setting">Split TLS record at SNI</string>
    <string name="version">Version</string>
    <string name="byedpi_readme_link">What does all of this mean?</string>
    <string name="failed_to_start">Не удалось запустить %1$s</string>
    <string name="vpn_channel_name">VPN</string>
    <string name="proxy_channel_name">Proxy</string>
    <string name="notification_title">FlowCloud</string>
    <string name="vpn_notification_content">Подключение активно: ByeDPI</string>
    <string name="auto_notification_content">Подключение активно: АВТО</string>
    <string name="proxy_notification_content">Proxy is running</string>
    <string name="general_category">General</string>
    <string name="byedpi_category">ByeDPI</string>
    <string name="about_category">About</string>
    <string name="command_line_editor">Command line editor</string>
    <string name="ui_editor">UI editor</string>
    <string name="use_command_line_settings">Use command line settings</string>
    <string name="desync_http">Desync HTTP</string>
    <string name="desync_https">Desync HTTPS</string>
    <string name="desync_udp">Desync UDP</string>
    <string name="oob_data">OOB Data</string>
    <string name="sni_of_fake_packet">SNI of fake packet</string>
    <string name="byedpi_proxy">Proxy</string>
    <string name="byedpi_desync">Desync</string>
    <string name="command_line_arguments">Command line arguments</string>
    <string name="byedpi_hosts_mode_setting">Hosts</string>
    <string name="byedpi_hosts_blacklist_setting">Hosts blacklist</string>
    <string name="byedpi_hosts_whitelist_setting">Hosts whitelist</string>
    <string name="byedpi_tcp_fast_open_setting">TCP Fast Open</string>
    <string name="byedpi_udp_fake_count">UDP fake count</string>
    <string name="ipv6_setting">IPv6</string>
    <string name="byedpi_fake_offset_setting">Fake offset</string>
    <string name="byedpi_drop_sack_setting">Drop SACK</string>
    <string name="desync_udp_category">UDP</string>
    <string name="desync_http_category">HTTP</string>
    <string name="desync_https_category">HTTPS</string>
    <string name="byedpi_protocols_category">Protocols</string>
    <string name="byedpi_protocols_hint">Uncheck all to desync all traffic</string>
</resources>
